--- a/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
+++ b/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
@@ -52,16 +52,19 @@
     <Compile Include="Activity1.Designer.cs">
       <DependentUpon>Activity1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="Activity2.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Activity2.Designer.cs">
+      <DependentUpon>Activity2.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Activity1.resx">
       <DependentUpon>Activity1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Activity2.resx">
+      <DependentUpon>Activity2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
