--- a/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
+++ b/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
@@ -82,6 +82,18 @@
     <Compile Include="Activity3.Designer.cs">
       <DependentUpon>Activity3.cs</DependentUpon>
     </Compile>
+    <Compile Include="Activity4.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Activity4.Designer.cs">
+      <DependentUpon>Activity4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Activity4_PrintFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Activity4_PrintFrm.Designer.cs">
+      <DependentUpon>Activity4_PrintFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Activity1.resx">
@@ -92,6 +104,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Activity3.resx">
       <DependentUpon>Activity3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Activity4.resx">
+      <DependentUpon>Activity4.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -139,6 +154,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Untitled design %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Untitled design %282%291.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Untitled design %281%291.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
