--- a/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
+++ b/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
@@ -94,6 +94,12 @@
     <Compile Include="Activity4_PrintFrm.Designer.cs">
       <DependentUpon>Activity4_PrintFrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Activity4_Transfer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Activity4_Transfer.Designer.cs">
+      <DependentUpon>Activity4_Transfer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Activity1.resx">
@@ -110,6 +116,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Activity4_PrintFrm.resx">
       <DependentUpon>Activity4_PrintFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Activity4_Transfer.resx">
+      <DependentUpon>Activity4_Transfer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
