--- a/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
+++ b/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
@@ -100,6 +100,12 @@
     <Compile Include="Activity4_Transfer.Designer.cs">
       <DependentUpon>Activity4_Transfer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Enrollment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Enrollment.Designer.cs">
+      <DependentUpon>Enrollment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Lesson5Activity.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -143,6 +149,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Activity4_Transfer.resx">
       <DependentUpon>Activity4_Transfer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Enrollment.resx">
+      <DependentUpon>Enrollment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Lesson5Activity.resx">
       <DependentUpon>Lesson5Activity.cs</DependentUpon>
