--- a/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
+++ b/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
@@ -100,6 +100,12 @@
     <Compile Include="Activity4_Transfer.Designer.cs">
       <DependentUpon>Activity4_Transfer.cs</DependentUpon>
     </Compile>
+    <Compile Include="DSAL_EXAM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DSAL_EXAM.Designer.cs">
+      <DependentUpon>DSAL_EXAM.cs</DependentUpon>
+    </Compile>
     <Compile Include="Enrollment.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -149,6 +155,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Activity4_Transfer.resx">
       <DependentUpon>Activity4_Transfer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DSAL_EXAM.resx">
+      <DependentUpon>DSAL_EXAM.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Enrollment.resx">
       <DependentUpon>Enrollment.cs</DependentUpon>
