--- a/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
+++ b/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
@@ -64,11 +64,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Activity1_Function.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Activity1_Function.Designer.cs">
+      <DependentUpon>Activity1_Function.cs</DependentUpon>
+    </Compile>
     <Compile Include="Activity1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Activity1.Designer.cs">
       <DependentUpon>Activity1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="POS1_Functions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="POS1_Functions.Designer.cs">
+      <DependentUpon>POS1_Functions.cs</DependentUpon>
     </Compile>
     <Compile Include="Activity2.cs">
       <SubType>Form</SubType>
@@ -138,8 +150,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Activity1_Function.resx">
+      <DependentUpon>Activity1_Function.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Activity1.resx">
       <DependentUpon>Activity1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="POS1_Functions.resx">
+      <DependentUpon>POS1_Functions.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Activity2.resx">
       <DependentUpon>Activity2.cs</DependentUpon>
