--- a/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
+++ b/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
@@ -76,6 +76,12 @@
     <Compile Include="Activity1.Designer.cs">
       <DependentUpon>Activity1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Payroll_Functions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Payroll_Functions.Designer.cs">
+      <DependentUpon>Payroll_Functions.cs</DependentUpon>
+    </Compile>
     <Compile Include="POS2_Functions.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -161,6 +167,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Activity1.resx">
       <DependentUpon>Activity1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Payroll_Functions.resx">
+      <DependentUpon>Payroll_Functions.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="POS2_Functions.resx">
       <DependentUpon>POS2_Functions.cs</DependentUpon>
