--- a/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
+++ b/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
@@ -76,42 +76,42 @@
     <Compile Include="Lesson 2\Activity1.Designer.cs">
       <DependentUpon>Activity1.cs</DependentUpon>
     </Compile>
-    <Compile Include="PayrollComputation.cs" />
-    <Compile Include="PayrollVariables.cs" />
-    <Compile Include="Payroll_classform.cs">
+    <Compile Include="Classforms\PayrollComputation.cs" />
+    <Compile Include="Classforms\PayrollVariables.cs" />
+    <Compile Include="Classforms\Payroll_classform.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Payroll_classform.Designer.cs">
+    <Compile Include="Classforms\Payroll_classform.Designer.cs">
       <DependentUpon>Payroll_classform.cs</DependentUpon>
     </Compile>
-    <Compile Include="Payroll_Functions.cs">
+    <Compile Include="Functions\Payroll_Functions.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Payroll_Functions.Designer.cs">
+    <Compile Include="Functions\Payroll_Functions.Designer.cs">
       <DependentUpon>Payroll_Functions.cs</DependentUpon>
     </Compile>
-    <Compile Include="POS1_classform.cs">
+    <Compile Include="Classforms\POS1_classform.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="POS1_classform.Designer.cs">
+    <Compile Include="Classforms\POS1_classform.Designer.cs">
       <DependentUpon>POS1_classform.cs</DependentUpon>
     </Compile>
-    <Compile Include="POS2_classform.cs">
+    <Compile Include="Classforms\POS2_classform.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="POS2_classform.Designer.cs">
+    <Compile Include="Classforms\POS2_classform.Designer.cs">
       <DependentUpon>POS2_classform.cs</DependentUpon>
     </Compile>
-    <Compile Include="POS2_Functions.cs">
+    <Compile Include="Functions\POS2_Functions.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="POS2_Functions.Designer.cs">
+    <Compile Include="Functions\POS2_Functions.Designer.cs">
       <DependentUpon>POS2_Functions.cs</DependentUpon>
     </Compile>
-    <Compile Include="POS1_Functions.cs">
+    <Compile Include="Functions\POS1_Functions.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="POS1_Functions.Designer.cs">
+    <Compile Include="Functions\POS1_Functions.Designer.cs">
       <DependentUpon>POS1_Functions.cs</DependentUpon>
     </Compile>
     <Compile Include="Lesson 2\Activity2.cs">
@@ -180,32 +180,32 @@
     <Compile Include="MainFrm.Designer.cs">
       <DependentUpon>MainFrm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Price_Item_Value.cs" />
+    <Compile Include="Classforms\Price_Item_Value.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Variables.cs" />
+    <Compile Include="Classforms\Variables.cs" />
     <EmbeddedResource Include="Lesson 2\Activity1_Function.resx">
       <DependentUpon>Activity1_Function.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Lesson 2\Activity1.resx">
       <DependentUpon>Activity1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Payroll_classform.resx">
+    <EmbeddedResource Include="Classforms\Payroll_classform.resx">
       <DependentUpon>Payroll_classform.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Payroll_Functions.resx">
+    <EmbeddedResource Include="Functions\Payroll_Functions.resx">
       <DependentUpon>Payroll_Functions.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="POS1_classform.resx">
+    <EmbeddedResource Include="Classforms\POS1_classform.resx">
       <DependentUpon>POS1_classform.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="POS2_classform.resx">
+    <EmbeddedResource Include="Classforms\POS2_classform.resx">
       <DependentUpon>POS2_classform.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="POS2_Functions.resx">
+    <EmbeddedResource Include="Functions\POS2_Functions.resx">
       <DependentUpon>POS2_Functions.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="POS1_Functions.resx">
+    <EmbeddedResource Include="Functions\POS1_Functions.resx">
       <DependentUpon>POS1_Functions.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Lesson 2\Activity2.resx">
