--- a/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
+++ b/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
@@ -184,6 +184,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classforms\Variables.cs" />
+    <Compile Include="SampleDatabaseDb.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SampleDatabaseDb.Designer.cs">
+      <DependentUpon>SampleDatabaseDb.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Lesson 2\Activity1_Function.resx">
       <DependentUpon>Activity1_Function.cs</DependentUpon>
     </EmbeddedResource>
@@ -251,6 +257,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SampleDatabaseDb.resx">
+      <DependentUpon>SampleDatabaseDb.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
