--- a/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
+++ b/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
@@ -64,6 +64,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="POS1_DataBase_Combo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="POS1_DataBase_Combo.Designer.cs">
+      <DependentUpon>POS1_DataBase_Combo.cs</DependentUpon>
+    </Compile>
     <Compile Include="POS1_DataBase.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -209,6 +215,9 @@
     <Compile Include="SampleDatabaseDb.Designer.cs">
       <DependentUpon>SampleDatabaseDb.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="POS1_DataBase_Combo.resx">
+      <DependentUpon>POS1_DataBase_Combo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="POS1_DataBase.resx">
       <DependentUpon>POS1_DataBase.cs</DependentUpon>
     </EmbeddedResource>
