--- a/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
+++ b/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
@@ -64,6 +64,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Finals\useraccount_report.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Finals\useraccount_report.Designer.cs">
+      <DependentUpon>useraccount_report.cs</DependentUpon>
+    </Compile>
     <Compile Include="Finals\sales_reports.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -256,12 +262,15 @@
       <DependentUpon>SampleDatabaseDb.cs</DependentUpon>
     </Compile>
     <Compile Include="Finals\useraccount_db_connection.cs" />
-    <Compile Include="user_accounts.cs">
+    <Compile Include="Finals\user_accounts.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="user_accounts.Designer.cs">
+    <Compile Include="Finals\user_accounts.Designer.cs">
       <DependentUpon>user_accounts.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Finals\useraccount_report.resx">
+      <DependentUpon>useraccount_report.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Finals\sales_reports.resx">
       <DependentUpon>sales_reports.cs</DependentUpon>
     </EmbeddedResource>
@@ -362,7 +371,7 @@
     <EmbeddedResource Include="SampleDatabaseDb.resx">
       <DependentUpon>SampleDatabaseDb.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="user_accounts.resx">
+    <EmbeddedResource Include="Finals\user_accounts.resx">
       <DependentUpon>user_accounts.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
