--- a/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
+++ b/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
@@ -110,6 +110,12 @@
     <Compile Include="Finals\Payrol_Database.Designer.cs">
       <DependentUpon>Payrol_Database.cs</DependentUpon>
     </Compile>
+    <Compile Include="LoginFrm_Database.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoginFrm_Database.Designer.cs">
+      <DependentUpon>LoginFrm_Database.cs</DependentUpon>
+    </Compile>
     <Compile Include="POS1_DataBase_Combo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -288,6 +294,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Finals\Payrol_Database.resx">
       <DependentUpon>Payrol_Database.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LoginFrm_Database.resx">
+      <DependentUpon>LoginFrm_Database.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="POS1_DataBase_Combo.resx">
       <DependentUpon>POS1_DataBase_Combo.cs</DependentUpon>
