--- a/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
+++ b/ACOTIN_POS_APPLICATION/ACOTIN_POS_APPLICATION.csproj
@@ -130,6 +130,12 @@
     <Compile Include="LoginFrm_Database.Designer.cs">
       <DependentUpon>LoginFrm_Database.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainFrm_Database.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainFrm_Database.Designer.cs">
+      <DependentUpon>MainFrm_Database.cs</DependentUpon>
+    </Compile>
     <Compile Include="POS1_DataBase_Combo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -311,6 +317,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="LoginFrm_Database.resx">
       <DependentUpon>LoginFrm_Database.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainFrm_Database.resx">
+      <DependentUpon>MainFrm_Database.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="POS1_DataBase_Combo.resx">
       <DependentUpon>POS1_DataBase_Combo.cs</DependentUpon>
